# Robo-Advisor-Wealth-Management

./: .env.example  .gitignore  BUG_FIX_REPORT.md  README.md  pyproject.toml
.streamlit/: config.toml
config/: clickhouse.yaml  kafka.yaml  notifications.yaml  trading.yaml
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.yml
docs/: README.md  Robo-Advisor Cá nhân (Wealth Management).md  code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/specs/: README.md  spec-00-overview.md  spec-01-data-pipeline.md  spec-02-analysis-engine.md  spec-03-risk-management.md  spec-04-ai-ml-engine.md  spec-05-trading-execution.md  spec-06-dashboard-ui.md  spec-07-notification-system.md
docs/wireframes/: INDEX.md  README.md  WIREFRAME_SUMMARY.txt  wireframe-00-layout-navigation.md  wireframe-01-main-dashboard.md  wireframe-02-market-data.md  wireframe-03-technical-analysis.md  wireframe-04-rrg-sector-rotation.md  wireframe-05-portfolio-management.md  wireframe-06-risk-dashboard.md  wireframe-07-ai-ml-monitor.md  wireframe-08-trading.md  wireframe-09-notifications.md
src/: __init__.py  kebab_module_loader.py
src/analysis/: __init__.py  analysis-utils.py  fundamental-valuation.py  relative-rotation-graph.py  technical-indicators.py  volume-spread-analysis.py
src/data/: __init__.py  historical-data-backfill.py  kafka-market-data-consumer.py  kafka-market-data-producer.py  market-data-schemas.py  market_data_schemas.py  vnstock-websocket-client.py
src/ml/: __init__.py  evidently-drift-monitor.py  (+1 more)
(+47 files in other folders)
